force-app/main/default/objects/PNR__c/PNR__c.object-meta.xml
<CustomObject>
    <label>PNR (Old)</label>
    <nameField>
        <label>PNR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNR (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>