force-app/main/default/objects/PNR__c/fields/Actual_Refund_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Actual_Refund_Amount_Received__c</fullName>
    <label>Actual Refund Amount Received</label>
    <summarizedField>PNR_Accounting_Line__c.Actual_Refund_Amount__c</summarizedField>
    <summaryForeignKey>PNR_Accounting_Line__c.pnr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>