force-app/main/default/objects/PNR__c/fields/Adam__c.field-meta.xml
<CustomField>
    <fullName>Adam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adam</label>
    <type>Checkbox</type>
</CustomField>