force-app/main/default/objects/PNR__c/fields/Base_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Currency__c</fullName>
    <label>Base Price Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>