force-app/main/default/objects/PNR__c/fields/Callout_Message__c.field-meta.xml
<CustomField>
    <fullName>Callout_Message__c</fullName>
    <label>Callout Message</label>
    <type>TextArea</type>
</CustomField>