force-app/main/default/objects/PNR__c/fields/Callout_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Callout_Status_Code__c</fullName>
    <label>Callout Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>