force-app/main/default/objects/PNR__c/fields/consolidated_cash_fare__c.field-meta.xml
<CustomField>
    <fullName>consolidated_cash_fare__c</fullName>
    <label>Consolidated Cash Fare</label>
    <summarizedField>PNR_Accounting_Line__c.cash_fare__c</summarizedField>
    <summaryFilterItems>
        <field>PNR_Accounting_Line__c.is_rollup_ready__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PNR_Accounting_Line__c.pnr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>