force-app/main/default/objects/PNR__c/fields/COVID_ClassOfService__c.field-meta.xml
<CustomField>
    <fullName>COVID_ClassOfService__c</fullName>
    <label>ClassOfService</label>
    <length>200</length>
    <type>Text</type>
</CustomField>