force-app/main/default/objects/PNR__c/fields/Creation_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Creation_Agent_Id__c</fullName>
    <label>Creation Agent Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>