force-app/main/default/objects/PNR__c/fields/Exclude_from_BER__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_BER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from BER</label>
    <type>Checkbox</type>
</CustomField>