force-app/main/default/objects/PNR__c/fields/Exclusive_Bookings_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Bookings_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exclusive Bookings Name</label>
    <referenceTo>Exclusive_Bookings__c</referenceTo>
    <relationshipLabel>PNR</relationshipLabel>
    <relationshipName>PNR</relationshipName>
    <type>Lookup</type>
</CustomField>