force-app/main/default/objects/PNR__c/fields/gst_on_service_fee__c.field-meta.xml
<CustomField>
    <fullName>gst_on_service_fee__c</fullName>
    <label>GST on Service Fee</label>
    <summarizedField>PNR_Accounting_Line__c.gst_on_service_fee__c</summarizedField>
    <summaryFilterItems>
        <field>PNR_Accounting_Line__c.is_rollup_ready__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PNR_Accounting_Line__c.pnr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>