force-app/main/default/objects/PNR__c/fields/Is_Response_Parsed__c.field-meta.xml
<CustomField>
    <fullName>Is_Response_Parsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Response Parsed</label>
    <type>Checkbox</type>
</CustomField>