force-app/main/default/objects/PNR__c/fields/Lounge_Pass_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Pass_Booked_Date__c</fullName>
    <label>Lounge Pass Booked Date</label>
    <type>Date</type>
</CustomField>