force-app/main/default/objects/PNR__c/fields/OriginalOrderPNR__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderPNR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OriginalOrderPNR</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>PNR (OriginalOrderPNR)</relationshipLabel>
    <relationshipName>OriginalOrderPNR</relationshipName>
    <type>Lookup</type>
</CustomField>