force-app/main/default/objects/PNR__c/fields/Refund_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_Received__c</fullName>
    <label>Refund Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>