force-app/main/default/objects/PNR__c/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAX Voluntary Cancellation</fullName>
            </value>
            <value>
                <fullName>IT/Development Error</fullName>
            </value>
            <value>
                <fullName>Communication/Internal process error</fullName>
            </value>
            <value>
                <fullName>Ticketing consultant error (name of the consultant)</fullName>
            </value>
            <value>
                <fullName>PAX Name error (PAX at Fault)</fullName>
            </value>
            <value>
                <fullName>Airline Invol schedule change</fullName>
            </value>
            <value>
                <fullName>TAD Cancellation - COVID-19</fullName>
            </value>
            <value>
                <fullName>Pax No Show</fullName>
            </value>
            <value>
                <fullName>Airline voluntary cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>