force-app/main/default/objects/PNR__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flights cancelled</fullName>
            </value>
            <value>
                <fullName>Flights open</fullName>
            </value>
            <value>
                <fullName>Flights submitted for refund</fullName>
            </value>
            <value>
                <fullName>Refund received</fullName>
            </value>
            <value>
                <fullName>TAD Group Credit</fullName>
            </value>
            <value>
                <fullName>Flights Reissued</fullName>
            </value>
            <value>
                <fullName>Cancelled on non-refundable airline</fullName>
            </value>
            <value>
                <fullName>Open for name change</fullName>
            </value>
            <value>
                <fullName>TAD Exclusives Credit</fullName>
            </value>
            <value>
                <fullName>Flights used</fullName>
            </value>
            <value>
                <fullName>Live Tickets</fullName>
            </value>
            <value>
                <fullName>Airline Direct Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>