force-app/main/default/objects/PNR__c/fields/Reschedule_By__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_By__c</fullName>
    <label>Reschedule By</label>
    <type>Date</type>
</CustomField>