force-app/main/default/objects/PNR__c/fields/Stop_Over_Booked__c.field-meta.xml
<CustomField>
    <fullName>Stop_Over_Booked__c</fullName>
    <formula>Order__r.S_Over_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stop Over Booked</label>
    <type>Checkbox</type>
</CustomField>