force-app/main/default/objects/PNR__c/fields/Stop_Over_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Over_Booked_Date__c</fullName>
    <label>Stop Over Booked Date</label>
    <type>Date</type>
</CustomField>