force-app/main/default/objects/PNR__c/fields/Tickets_Attached__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Attached__c</fullName>
    <label>Tickets Attached</label>
    <summaryForeignKey>PNR_Accounting_Line__c.pnr__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>