force-app/main/default/objects/PNR__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <label>Total Commission Amount</label>
    <summarizedField>PNR_Accounting_Line__c.commission_amount__c</summarizedField>
    <summaryFilterItems>
        <field>PNR_Accounting_Line__c.is_rollup_ready__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PNR_Accounting_Line__c.pnr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>