force-app/main/default/objects/PNR__c/fields/Travel_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_by_Date__c</fullName>
    <label>Travel by Date</label>
    <type>Date</type>
</CustomField>