force-app/main/default/objects/PNR__c/fields/validatingCarrier__c.field-meta.xml
<CustomField>
    <fullName>validatingCarrier__c</fullName>
    <label>validatingCarrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>